now you can only have 1 of each window open at a time, also.

---------------------------------------------------------------------------

Mon Dec 27 15:40:15 PST 1999
(Mandrake)

cleaned up a little bit of interface issues.  everything is kinda smoothing
out now.

---------------------------------------------------------------------------

Mon Dec 27 16:00:25 PST 1999
(Mandrake)

now you can actually move around the scales.

---------------------------------------------------------------------------

Mon Dec 27 18:01:49 PST 1999
(Mandrake)

Hooked in file loading, etc.  reduced the va logo as well as the initial size
of the window we're dealing with (it doesn't need to be huge after all).
Redid a little more layout, also.

---------------------------------------------------------------------------

Mon Dec 27 22:40:03 PST 1999
(Mandrake)

added license as well as copyright statements to all the files.

---------------------------------------------------------------------------

Wed Dec 29 14:23:22 PST 1999
(Mandrake)

added open using template dialog

---------------------------------------------------------------------------

Wed Dec 29 15:10:39 PST 1999
(Mandrake)

added movie info screen.

---------------------------------------------------------------------------

Wed Dec 29 17:35:42 PST 1999
(Mandrake)

fixed preferences to actually align properly.  (need to fix text entry next)

---------------------------------------------------------------------------

Wed Dec 29 18:14:16 PST 1999
(Mandrake)

added padding around a few more windows

---------------------------------------------------------------------------

Thu Dec 30 10:38:50 PST 1999
(Mandrake)

linked in file selector for Open Movie also

---------------------------------------------------------------------------

Sat Jan  1 18:53:02 PST 2000
(Mandrake)

Added in some callbacks for important stuff.  Going to add a sample player, as
well as saving data constructs shortly